--- a/ui.html
+++ b/ui.html
@@ -10,20 +10,99 @@
 <p>Status</p>
 <div id="status"></div>
 <script>
+// a local copy of board status
+// index 0
+	// 0 untaken
+	// 1 taken by player 1
+	// 2 taken by player 2
+var boardMatrix = new Array();
+for(var i=0; i<20; i++) {
+    boardMatrix[i] = new Array();
+    for(var j=0; j<20; j++) {
+        boardMatrix[i][j] = new Array();
+		for(var k=0; k<5; k++)
+			boardMatrix[i][j][k] = 0; //set all to 0
+    }
+}
+</script>
+<script>
+//returns -1 place taken  
+// 2 wins
+// 1 continue
+function updateBoradMatrix(x, y, player){
+	if(boardMatrix[x][y][0]!=0)
+		return -1;
+	else{
+		boardMatrix[x][y][0] = player;
+		if(boardMatrix[x-1][y-1][0] == player){
+			boardMatrix[x-1][y-1][1] += 1;
+			boardMatrix[x][y][1] += 1;
+		}
+		if(boardMatrix[x][y-1][0] == player){
+			boardMatrix[x][y-1][2] += 1;
+			boardMatrix[x][y][2] += 1;
+		}	
+		if(boardMatrix[x+1][y-1][0] == player){
+			boardMatrix[x+1][y-1][3] += 1;
+			boardMatrix[x][y][3] += 1;
+		}	
+		if(boardMatrix[x-1][y][0] == player){
+			boardMatrix[x-1][y][4] += 1;
+			boardMatrix[x][y][4] += 1;
+		}
+		if(boardMatrix[x+1][y][0] == player){
+			boardMatrix[x+1][y][4] += 1;
+			boardMatrix[x][y][4] += boardMatrix[x-1][y][4];
+		}
+		if(boardMatrix[x-1][y+1][0] == player){
+			boardMatrix[x-1][y+1][3] += 1;
+			boardMatrix[x][y][3] += boardMatrix[x-1][y+1][3];
+		}
+		if(boardMatrix[x][y+1][0] == player){
+			boardMatrix[x][y+1][2] += 1;
+			boardMatrix[x][y][2] += boardMatrix[x][y+1][2];
+		}
+		if(boardMatrix[x+1][y+1][0] == player){
+			boardMatrix[x+1][y+1][1] += 1;
+			boardMatrix[x][y][1] += boardMatrix[x+1][y+1][1];
+		}
+		for(var k=1; k<5; k++)
+			if(boardMatrix[x][y][k] >= 5)
+				return 2;
+	}
+	return 1;
+}
+</script>
+<script>
 $("#board").offset({top:20,left:20})
 var player = 1;
 //reference: http://stackoverflow.com/questions/3067691/html5-canvas-click-event
 $("#board").click(function(e){
+	// edge clicking->go bottom right
 	var c=document.getElementById("board");
-    var x = Math.floor((e.pageX-$("#board").offset().left) / 20) + 1;
-    var y = Math.floor((e.pageY-$("#board").offset().top) / 20) + 1;
+    var x = Math.floor((e.pageX-$("#board").offset().left) / 20);
+    var y = Math.floor((e.pageY-$("#board").offset().top) / 20);
 	if(player == 1){
-		drawPiece(x,y,1);
-		player = 2;
+		if(boardMatrix[x][y][0]!=0){
+			player = 1;
+		}
+		else{
+			drawPiece(x,y,1);
+			if(updateBoradMatrix(x, y, 1) == 2)
+				alert("player 1 wins");
+			player = 2;
+		}
 	}
 	else{
-		drawPiece(x,y,2);
-		player = 1;
+		if(boardMatrix[x][y][0]!=0){
+			player = 2;
+		}
+		else{
+			drawPiece(x,y,2);
+			if(updateBoradMatrix(x, y, 2) == 2)
+				alert("player 2 wins")		
+			player = 1;
+		}
 	}
 });
 </script>
@@ -41,12 +120,12 @@ function drawGrids(){
 	ctx.stroke();
 }
 
-function drawPiece(x, y, color){
+function drawPiece(x, y, player){
 	var c=document.getElementById("board");
 	var ctx=c.getContext("2d");
 	ctx.beginPath();
-	ctx.arc(x*20-10, y*20-10, 7, 0, 2 * Math.PI, false);
-	if (color == 2){
+	ctx.arc(x*20+10, y*20+10, 7, 0, 2 * Math.PI, false);
+	if (player == 2){
 		ctx.fillStyle = 'black';
 		ctx.fill();
 	}
@@ -57,6 +136,6 @@ function drawPiece(x, y, color){
 </script>
 <script>
 drawGrids();
-gg</script>
+</script>
 </body>
 </html>
