implement winner algorithm

--- a/ui.html
+++ b/ui.html
@@ -29,42 +29,102 @@ for(var i=0; i<20; i++) {
 //returns -1 place taken  
 // 2 wins
 // 1 continue
+// goal: maintain the end-point of 'combos'. Use current point for winner detection
 function updateBoradMatrix(x, y, player){
 	if(boardMatrix[x][y][0]!=0)
 		return -1;
 	else{
 		boardMatrix[x][y][0] = player;
+		boardMatrix[x][y][1] = 1;
+		boardMatrix[x][y][2] = 1;
+		boardMatrix[x][y][3] = 1;
 		if(boardMatrix[x-1][y-1][0] == player){
-			boardMatrix[x-1][y-1][1] += 1;
-			boardMatrix[x][y][1] += 1;
+			if(boardMatrix[x+1][y+1][0] == player){
+				counter1 = boardMatrix[x-1][y-1][1];
+				counter2 = boardMatrix[x+1][y+1][1];
+				counter3 = counter1 + counter2 + 1;
+				boardMatrix[x-counter1][y-counter1][1] = counter3;
+				boardMatrix[x+counter2][y+counter2][1] = counter3;
+				boardMatrix[x][y][1] = counter3;				
+			}
+			else{			
+				counter1 = boardMatrix[x-1][y-1][1];
+				boardMatrix[x-counter1][y-counter1][1] = counter1 + 1;
+				boardMatrix[x][y][1] = counter1 + 1;
+			}
 		}
 		if(boardMatrix[x][y-1][0] == player){
-			boardMatrix[x][y-1][2] += 1;
-			boardMatrix[x][y][2] += 1;
-		}	
+			if(boardMatrix[x][y+1][0] == player){
+				counter1 = boardMatrix[x][y-1][2];
+				counter2 = boardMatrix[x][y+1][2];
+				counter3 = counter1 + counter2 + 1;
+				boardMatrix[x][y-counter1][2] = counter3;
+				boardMatrix[x][y+counter2][2] = counter3;
+				boardMatrix[x][y][2] = counter3;				
+			}
+			else{			
+				counter1 = boardMatrix[x][y-1][2];
+				boardMatrix[x][y-counter1][2] = counter1 + 1;
+				boardMatrix[x][y][2] = counter1 + 1;
+			}
+		}
 		if(boardMatrix[x+1][y-1][0] == player){
-			boardMatrix[x+1][y-1][3] += 1;
-			boardMatrix[x][y][3] += 1;
-		}	
-		if(boardMatrix[x-1][y][0] == player){
-			boardMatrix[x-1][y][4] += 1;
-			boardMatrix[x][y][4] += 1;
+			if(boardMatrix[x-1][y+1][0] == player){
+				counter1 = boardMatrix[x+1][y-1][3];
+				counter2 = boardMatrix[x-1][y+1][3];
+				counter3 = counter1 + counter2 + 1;
+				boardMatrix[x+counter1][y-counter1][3] = counter3;
+				boardMatrix[x-counter2][y+counter2][3] = counter3;
+				boardMatrix[x][y][3] = counter3;				
+			}
+			else{			
+				counter1 = boardMatrix[x+1][y-1][3];
+				boardMatrix[x+counter1][y-counter1][3] = counter1 + 1;
+				boardMatrix[x][y][3] = counter1 + 1;
+			}
 		}
 		if(boardMatrix[x+1][y][0] == player){
-			boardMatrix[x+1][y][4] += 1;
-			boardMatrix[x][y][4] += boardMatrix[x-1][y][4];
+			if(boardMatrix[x-1][y][0] == player){
+				counter1 = boardMatrix[x+1][y][4];
+				counter2 = boardMatrix[x-1][y][4];
+				counter3 = counter1 + counter2 + 1;
+				boardMatrix[x+counter1][y][4] = counter3;
+				boardMatrix[x-counter2][y][4] = counter3;
+				boardMatrix[x][y][4] = counter3;				
+			}
+			else{			
+				counter1 = boardMatrix[x+1][y][4];
+				boardMatrix[x+counter1][y][4] = counter1 + 1;
+				boardMatrix[x][y][4] = counter1 + 1;
+			}
 		}
 		if(boardMatrix[x-1][y+1][0] == player){
-			boardMatrix[x-1][y+1][3] += 1;
-			boardMatrix[x][y][3] += boardMatrix[x-1][y+1][3];
+			if(boardMatrix[x+1][y-1][0] != player){
+				counter1 = boardMatrix[x-1][y+1][3];
+				boardMatrix[x-counter1][y+counter1][3] = counter1 + 1;
+				boardMatrix[x][y][3] = counter1 + 1;
+			}
 		}
 		if(boardMatrix[x][y+1][0] == player){
-			boardMatrix[x][y+1][2] += 1;
-			boardMatrix[x][y][2] += boardMatrix[x][y+1][2];
+			if(boardMatrix[x][y-1][0] != player){
+				counter1 = boardMatrix[x][y+1][2];
+				boardMatrix[x][y+counter1][2] = counter1 + 1;
+				boardMatrix[x][y][2] = counter1 + 1;
+			}
 		}
 		if(boardMatrix[x+1][y+1][0] == player){
-			boardMatrix[x+1][y+1][1] += 1;
-			boardMatrix[x][y][1] += boardMatrix[x+1][y+1][1];
+			if(boardMatrix[x-1][y-1][0] != player){
+				counter1 = boardMatrix[x+1][y+1][1];
+				boardMatrix[x+counter1][y+counter1][1] = counter1 + 1;
+				boardMatrix[x][y][1] = counter1 + 1;
+			}
+		}
+		if(boardMatrix[x+1][y][0] == player){
+			if(boardMatrix[x-1][y][0] != player){
+				counter1 = boardMatrix[x+1][y][4];
+				boardMatrix[x+counter1][y][4] = counter1 + 1;
+				boardMatrix[x][y][4] = counter1 + 1;
+			}
 		}
 		for(var k=1; k<5; k++)
 			if(boardMatrix[x][y][k] >= 5)
