--- a/ui.html
+++ b/ui.html
@@ -9,20 +9,36 @@
 <canvas id="board" width="400" height="400"></canvas>
 <p>Status</p>
 <div id="status"></div>
+<button type="button" onclick="restartGame()">Restart game / 重新开始游戏</button>
 <script>
+var player = 1;
+var gameEnd = 0;
+var alertStorage = new Array();
+alertStorage[0] = "Waiting on White / 等待白方";
+alertStorage[1] = "Waiting on Black / 等待黑方";
+alertStorage[2] = "White wins / 白方获胜";
+alertStorage[3] = "Black wins / 黑方获胜";
+$("#status").html(alertStorage[0]);
+
+$("#board").offset({top:20,left:20})
+
 // a local copy of board status
 // index 0
 	// 0 untaken
 	// 1 taken by player 1
 	// 2 taken by player 2
+	//board: 20 by 20
 var boardMatrix = new Array();
-for(var i=0; i<20; i++) {
+for(var i=0; i<=20; i++) {
     boardMatrix[i] = new Array();
-    for(var j=0; j<20; j++) {
+    for(var j=0; j<=20; j++) {
         boardMatrix[i][j] = new Array();
 		for(var k=0; k<5; k++)
 			boardMatrix[i][j][k] = 0; //set all to 0
     }
+}
+function changeAlert(alertNumber){
+	$("#status").html(alertStorage[alertNumber]);
 }
 </script>
 <script>
@@ -30,6 +46,8 @@ for(var i=0; i<20; i++) {
 // 2 wins
 // 1 continue
 // goal: maintain the end-point of 'combos'. Use current point for winner detection
+
+// todo: boundary checking on edges->done
 function updateBoradMatrix(x, y, player){
 	if(boardMatrix[x][y][0]!=0)
 		return -1;
@@ -38,8 +56,9 @@ function updateBoradMatrix(x, y, player){
 		boardMatrix[x][y][1] = 1;
 		boardMatrix[x][y][2] = 1;
 		boardMatrix[x][y][3] = 1;
-		if(boardMatrix[x-1][y-1][0] == player){
-			if(boardMatrix[x+1][y+1][0] == player){
+		boardMatrix[x][y][4] = 1;
+		if(x!=0 && y!=0 && boardMatrix[x-1][y-1][0] == player){
+			if(x!=19&&y!=19&&boardMatrix[x+1][y+1][0] == player){
 				counter1 = boardMatrix[x-1][y-1][1];
 				counter2 = boardMatrix[x+1][y+1][1];
 				counter3 = counter1 + counter2 + 1;
@@ -53,8 +72,8 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][1] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x][y-1][0] == player){
-			if(boardMatrix[x][y+1][0] == player){
+		if(y!=0&&boardMatrix[x][y-1][0] == player){
+			if(y!=19&&boardMatrix[x][y+1][0] == player){
 				counter1 = boardMatrix[x][y-1][2];
 				counter2 = boardMatrix[x][y+1][2];
 				counter3 = counter1 + counter2 + 1;
@@ -68,8 +87,8 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][2] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x+1][y-1][0] == player){
-			if(boardMatrix[x-1][y+1][0] == player){
+		if(x!=19&&y!=0&&boardMatrix[x+1][y-1][0] == player){
+			if(x!=0&&y!=19&&boardMatrix[x-1][y+1][0] == player){
 				counter1 = boardMatrix[x+1][y-1][3];
 				counter2 = boardMatrix[x-1][y+1][3];
 				counter3 = counter1 + counter2 + 1;
@@ -83,8 +102,8 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][3] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x+1][y][0] == player){
-			if(boardMatrix[x-1][y][0] == player){
+		if(x!=19&&boardMatrix[x+1][y][0] == player){
+			if(x!=0&&boardMatrix[x-1][y][0] == player){
 				counter1 = boardMatrix[x+1][y][4];
 				counter2 = boardMatrix[x-1][y][4];
 				counter3 = counter1 + counter2 + 1;
@@ -98,34 +117,35 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][4] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x-1][y+1][0] == player){
-			if(boardMatrix[x+1][y-1][0] != player){
+		if(x!=0&&y!=19&&boardMatrix[x-1][y+1][0] == player){
+			if(x==19||y==0||(x!=19&&y!=0&&boardMatrix[x+1][y-1][0] != player)){
 				counter1 = boardMatrix[x-1][y+1][3];
 				boardMatrix[x-counter1][y+counter1][3] = counter1 + 1;
 				boardMatrix[x][y][3] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x][y+1][0] == player){
-			if(boardMatrix[x][y-1][0] != player){
+		if(y!=19&&boardMatrix[x][y+1][0] == player){
+			if(y==0||(y!=0&&boardMatrix[x][y-1][0] != player)){
 				counter1 = boardMatrix[x][y+1][2];
 				boardMatrix[x][y+counter1][2] = counter1 + 1;
 				boardMatrix[x][y][2] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x+1][y+1][0] == player){
-			if(boardMatrix[x-1][y-1][0] != player){
+		if(x!=19&&y!=19&&boardMatrix[x+1][y+1][0] == player){
+			if(x==0||y==0||(x!=0&&y!=0&&boardMatrix[x-1][y-1][0] != player)){
 				counter1 = boardMatrix[x+1][y+1][1];
 				boardMatrix[x+counter1][y+counter1][1] = counter1 + 1;
 				boardMatrix[x][y][1] = counter1 + 1;
 			}
 		}
-		if(boardMatrix[x+1][y][0] == player){
-			if(boardMatrix[x-1][y][0] != player){
-				counter1 = boardMatrix[x+1][y][4];
-				boardMatrix[x+counter1][y][4] = counter1 + 1;
+		if(x!=0&&boardMatrix[x-1][y][0] == player){
+			if(x==19||(x!=19&&boardMatrix[x+1][y][0] != player)){
+				counter1 = boardMatrix[x-1][y][4];
+				boardMatrix[x-counter1][y][4] = counter1 + 1;
 				boardMatrix[x][y][4] = counter1 + 1;
 			}
 		}
+		console.log(boardMatrix[x][y]);
 		for(var k=1; k<5; k++)
 			if(boardMatrix[x][y][k] >= 5)
 				return 2;
@@ -134,39 +154,62 @@ function updateBoradMatrix(x, y, player){
 }
 </script>
 <script>
-$("#board").offset({top:20,left:20})
-var player = 1;
 //reference: http://stackoverflow.com/questions/3067691/html5-canvas-click-event
 $("#board").click(function(e){
+	if (gameEnd == 1)
+		return;
 	// edge clicking->go bottom right
 	var c=document.getElementById("board");
     var x = Math.floor((e.pageX-$("#board").offset().left) / 20);
     var y = Math.floor((e.pageY-$("#board").offset().top) / 20);
+	console.log(x,y);
 	if(player == 1){
 		if(boardMatrix[x][y][0]!=0){
-			player = 1;
+			//player = 1;
 		}
 		else{
 			drawPiece(x,y,1);
-			if(updateBoradMatrix(x, y, 1) == 2)
-				alert("player 1 wins");
-			player = 2;
+			if(updateBoradMatrix(x, y, 1) == 2){
+				changeAlert(2);
+				gameEnd = 1;
+			}
+			else{
+				player = 2;
+				changeAlert(1);
+			}
 		}
 	}
 	else{
 		if(boardMatrix[x][y][0]!=0){
-			player = 2;
+			//player = 2;
 		}
 		else{
 			drawPiece(x,y,2);
-			if(updateBoradMatrix(x, y, 2) == 2)
-				alert("player 2 wins")		
-			player = 1;
+			if(updateBoradMatrix(x, y, 2) == 2){
+				changeAlert(3);
+				gameEnd = 1;
+			}
+			else{
+				player = 1;
+				changeAlert(0);
+			}
 		}
 	}
 });
 </script>
 <script>
+function drawPiece(x, y, player){
+	var c=document.getElementById("board");
+	var ctx=c.getContext("2d");
+	ctx.beginPath();
+	ctx.arc(x*20+10, y*20+10, 7, 0, 2 * Math.PI, false);
+	if (player == 2){
+		ctx.fillStyle = 'black';
+		ctx.fill();
+	}
+	ctx.strokeStyle = '#000000';
+	ctx.stroke();
+}
 function drawGrids(){
 	var c=document.getElementById("board");
 	var ctx=c.getContext("2d");
@@ -179,23 +222,23 @@ function drawGrids(){
 	}
 	ctx.stroke();
 }
-
-function drawPiece(x, y, player){
+drawGrids();
+function restartGame(){
+	player = 1;
+	gameEnd = 0;
+	
+	for(var i=0; i<=20; i++)
+		for(var j=0; j<=20; j++)
+			for(var k=0; k<5; k++)
+				boardMatrix[i][j][k] = 0; //set all to 0
+	
+	$("#status").html(alertStorage[0]);
+	
 	var c=document.getElementById("board");
 	var ctx=c.getContext("2d");
-	ctx.beginPath();
-	ctx.arc(x*20+10, y*20+10, 7, 0, 2 * Math.PI, false);
-	if (player == 2){
-		ctx.fillStyle = 'black';
-		ctx.fill();
-	}
-	ctx.strokeStyle = '#000000';
-	ctx.stroke();	
+	ctx.clearRect(0, 0, c.width, c.height);
+	drawGrids();
 }
-
-</script>
-<script>
-drawGrids();
 </script>
 </body>
 </html>
