--- a/ui.html
+++ b/ui.html
@@ -11,6 +11,26 @@
 <div id="status"></div>
 <button type="button" onclick="restartGame()">Restart game / 重新开始游戏</button>
 <script>
+//abstract 1: board grid number -> board should be square
+//abstract 2: adjust to initial window size
+var gridCount = 20;
+
+var gridEdge = gridCount - 1;
+
+var wWidth = $(window).width();
+var wHeight = $(window).height();
+var wMin = (wWidth<wHeight?wWidth:wHeight);
+var gridWidth = 20;
+if(wMin > 510){
+	gridWidth = Math.floor(wMin*0.7/gridCount);
+}
+var canvasWidth = gridWidth * gridCount;
+$("#board").prop({'width':canvasWidth,'height':canvasWidth});
+
+var gridWidthHalf = Math.floor(gridWidth / 2);
+var radius = Math.floor(0.7*gridWidthHalf);
+</script>
+<script>
 var player = 1;
 var gameEnd = 0;
 var alertStorage = new Array();
@@ -20,7 +40,7 @@ alertStorage[2] = "White wins / 白方获胜";
 alertStorage[3] = "Black wins / 黑方获胜";
 $("#status").html(alertStorage[0]);
 
-$("#board").offset({top:20,left:20})
+$("#board").offset({top:20,left:20});
 
 // a local copy of board status
 // index 0
@@ -29,9 +49,9 @@ $("#board").offset({top:20,left:20})
 	// 2 taken by player 2
 	//board: 20 by 20
 var boardMatrix = new Array();
-for(var i=0; i<=20; i++) {
+for(var i=0; i<gridCount; i++) {
     boardMatrix[i] = new Array();
-    for(var j=0; j<=20; j++) {
+    for(var j=0; j<gridCount; j++) {
         boardMatrix[i][j] = new Array();
 		for(var k=0; k<5; k++)
 			boardMatrix[i][j][k] = 0; //set all to 0
@@ -58,7 +78,7 @@ function updateBoradMatrix(x, y, player){
 		boardMatrix[x][y][3] = 1;
 		boardMatrix[x][y][4] = 1;
 		if(x!=0 && y!=0 && boardMatrix[x-1][y-1][0] == player){
-			if(x!=19&&y!=19&&boardMatrix[x+1][y+1][0] == player){
+			if(x!=gridEdge&&y!=gridEdge&&boardMatrix[x+1][y+1][0] == player){
 				counter1 = boardMatrix[x-1][y-1][1];
 				counter2 = boardMatrix[x+1][y+1][1];
 				counter3 = counter1 + counter2 + 1;
@@ -66,14 +86,14 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x+counter2][y+counter2][1] = counter3;
 				boardMatrix[x][y][1] = counter3;				
 			}
-			else{			
+			else{
 				counter1 = boardMatrix[x-1][y-1][1];
 				boardMatrix[x-counter1][y-counter1][1] = counter1 + 1;
 				boardMatrix[x][y][1] = counter1 + 1;
 			}
 		}
 		if(y!=0&&boardMatrix[x][y-1][0] == player){
-			if(y!=19&&boardMatrix[x][y+1][0] == player){
+			if(y!=gridEdge&&boardMatrix[x][y+1][0] == player){
 				counter1 = boardMatrix[x][y-1][2];
 				counter2 = boardMatrix[x][y+1][2];
 				counter3 = counter1 + counter2 + 1;
@@ -87,8 +107,8 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][2] = counter1 + 1;
 			}
 		}
-		if(x!=19&&y!=0&&boardMatrix[x+1][y-1][0] == player){
-			if(x!=0&&y!=19&&boardMatrix[x-1][y+1][0] == player){
+		if(x!=gridEdge&&y!=0&&boardMatrix[x+1][y-1][0] == player){
+			if(x!=0&&y!=gridEdge&&boardMatrix[x-1][y+1][0] == player){
 				counter1 = boardMatrix[x+1][y-1][3];
 				counter2 = boardMatrix[x-1][y+1][3];
 				counter3 = counter1 + counter2 + 1;
@@ -102,7 +122,7 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][3] = counter1 + 1;
 			}
 		}
-		if(x!=19&&boardMatrix[x+1][y][0] == player){
+		if(x!=gridEdge&&boardMatrix[x+1][y][0] == player){
 			if(x!=0&&boardMatrix[x-1][y][0] == player){
 				counter1 = boardMatrix[x+1][y][4];
 				counter2 = boardMatrix[x-1][y][4];
@@ -117,21 +137,21 @@ function updateBoradMatrix(x, y, player){
 				boardMatrix[x][y][4] = counter1 + 1;
 			}
 		}
-		if(x!=0&&y!=19&&boardMatrix[x-1][y+1][0] == player){
-			if(x==19||y==0||(x!=19&&y!=0&&boardMatrix[x+1][y-1][0] != player)){
+		if(x!=0&&y!=gridEdge&&boardMatrix[x-1][y+1][0] == player){
+			if(x==gridEdge||y==0||(x!=gridEdge&&y!=0&&boardMatrix[x+1][y-1][0] != player)){
 				counter1 = boardMatrix[x-1][y+1][3];
 				boardMatrix[x-counter1][y+counter1][3] = counter1 + 1;
 				boardMatrix[x][y][3] = counter1 + 1;
 			}
 		}
-		if(y!=19&&boardMatrix[x][y+1][0] == player){
+		if(y!=gridEdge&&boardMatrix[x][y+1][0] == player){
 			if(y==0||(y!=0&&boardMatrix[x][y-1][0] != player)){
 				counter1 = boardMatrix[x][y+1][2];
 				boardMatrix[x][y+counter1][2] = counter1 + 1;
 				boardMatrix[x][y][2] = counter1 + 1;
 			}
 		}
-		if(x!=19&&y!=19&&boardMatrix[x+1][y+1][0] == player){
+		if(x!=gridEdge&&y!=gridEdge&&boardMatrix[x+1][y+1][0] == player){
 			if(x==0||y==0||(x!=0&&y!=0&&boardMatrix[x-1][y-1][0] != player)){
 				counter1 = boardMatrix[x+1][y+1][1];
 				boardMatrix[x+counter1][y+counter1][1] = counter1 + 1;
@@ -139,13 +159,13 @@ function updateBoradMatrix(x, y, player){
 			}
 		}
 		if(x!=0&&boardMatrix[x-1][y][0] == player){
-			if(x==19||(x!=19&&boardMatrix[x+1][y][0] != player)){
+			if(x==gridEdge||(x!=gridEdge&&boardMatrix[x+1][y][0] != player)){
 				counter1 = boardMatrix[x-1][y][4];
 				boardMatrix[x-counter1][y][4] = counter1 + 1;
 				boardMatrix[x][y][4] = counter1 + 1;
 			}
 		}
-		console.log(boardMatrix[x][y]);
+		//console.log(boardMatrix[x][y]);
 		for(var k=1; k<5; k++)
 			if(boardMatrix[x][y][k] >= 5)
 				return 2;
@@ -160,14 +180,11 @@ $("#board").click(function(e){
 		return;
 	// edge clicking->go bottom right
 	var c=document.getElementById("board");
-    var x = Math.floor((e.pageX-$("#board").offset().left) / 20);
-    var y = Math.floor((e.pageY-$("#board").offset().top) / 20);
-	console.log(x,y);
+    var x = Math.floor((e.pageX-$("#board").offset().left) / gridWidth);
+    var y = Math.floor((e.pageY-$("#board").offset().top) / gridWidth);
+	//console.log(x,y);
 	if(player == 1){
-		if(boardMatrix[x][y][0]!=0){
-			//player = 1;
-		}
-		else{
+		if(boardMatrix[x][y][0]==0){
 			drawPiece(x,y,1);
 			if(updateBoradMatrix(x, y, 1) == 2){
 				changeAlert(2);
@@ -180,10 +197,7 @@ $("#board").click(function(e){
 		}
 	}
 	else{
-		if(boardMatrix[x][y][0]!=0){
-			//player = 2;
-		}
-		else{
+		if(boardMatrix[x][y][0]==0){
 			drawPiece(x,y,2);
 			if(updateBoradMatrix(x, y, 2) == 2){
 				changeAlert(3);
@@ -202,7 +216,7 @@ function drawPiece(x, y, player){
 	var c=document.getElementById("board");
 	var ctx=c.getContext("2d");
 	ctx.beginPath();
-	ctx.arc(x*20+10, y*20+10, 7, 0, 2 * Math.PI, false);
+	ctx.arc(x*gridWidth+gridWidthHalf, y*gridWidth+gridWidthHalf, radius, 0, 2 * Math.PI, false);
 	if (player == 2){
 		ctx.fillStyle = 'black';
 		ctx.fill();
@@ -214,11 +228,11 @@ function drawGrids(){
 	var c=document.getElementById("board");
 	var ctx=c.getContext("2d");
 	ctx.beginPath();
-	for (i =0;i<=20;i++){
-		ctx.moveTo(0,i*20);
-		ctx.lineTo(400,i*20);
-		ctx.moveTo(i*20,0);
-		ctx.lineTo(i*20,400);
+	for (i =0;i<=gridCount;i++){
+		ctx.moveTo(0,i*gridWidth);
+		ctx.lineTo(canvasWidth,i*gridWidth);
+		ctx.moveTo(i*gridWidth,0);
+		ctx.lineTo(i*gridWidth,canvasWidth);
 	}
 	ctx.stroke();
 }
@@ -227,8 +241,8 @@ function restartGame(){
 	player = 1;
 	gameEnd = 0;
 	
-	for(var i=0; i<=20; i++)
-		for(var j=0; j<=20; j++)
+	for(var i=0; i<gridCount; i++)
+		for(var j=0; j<gridCount; j++)
 			for(var k=0; k<5; k++)
 				boardMatrix[i][j][k] = 0; //set all to 0
 	
