--- a/ui.html
+++ b/ui.html
@@ -5,11 +5,15 @@
   <title>UI</title>
   <script src="js/jquery-2.0.3.min.js"></script>
   <script src="js/board.js"></script>
+  <script src="js/states.js"></script>
 </head>
 <body>
-<canvas id="board" width="500" height="500"></canvas>
+<canvas id="board" width="370" height="370"></canvas>
 <p>Status</p>
 <div id="status"></div>
 <button type="button" onclick="restartGame()">Restart game</button>
+<script>
+state1();
+</script>
 </body>
 </html>
