add alg to determine win state

--- a/ui.html
+++ b/ui.html
@@ -13,7 +13,7 @@
 <div id="status"></div>
 <button type="button" onclick="restartGame()">Restart game</button>
 <script>
-state1();
+gotoState2();
 </script>
 </body>
 </html>
